# sysstatus

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
sysstatus/: __init__.py  cli.py  config.py  core.py  exceptions.py  utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_core.py  test_exceptions.py  test_integration.py  test_utils.py
